--- a/login/registration.html
+++ b/login/registration.html
@@ -10,28 +10,10 @@
   
 </head>
 <body>
-<header style="height: 90px;">
-  
-<div class="logo">
-      <h1 style="color: white; font-size: 25px;word-spacing: 10px; line-height: 80px;margin-top: 20px;">ONLINE LIBRARY MANAGEMENT SYSTEM</h1>
-    </div>
-
-      <nav>
-        <ul>
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="">BOOKS</a></li>
-          <li><a href="student_login.html">STUDENT-LOGIN</a></li>
-          <li><a href="registration.html">REGISTRATION</a></li>
-          <li><a href="">FEEDBACK</a></li>
-        </ul>
-      </nav>
-</header>
-
 <section>
   <div class="reg_img">
 
     <div class="box2">
-        <h1 style="text-align: center; font-size: 35px;font-family: Lucida Console;">Library Management System</h1><br>
         <h1 style="text-align: center; font-size: 25px;">User Registration Form</h1><br>
       <form name="Registration" action="" method="">
         <br><br>
@@ -46,8 +28,8 @@
 
           <button>Sign Up</button></div>
       </form>
-     
     </div>
   </div>
 </section>
 </body>
+</html>
